<resources>
    <string name="app_name">fol.io</string>
    <string name="not_registered">Not Registered? Sign Up Here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_account">Already have an account? Sign In</string>
    <string name="Subheader_homepage">Stocks</string>
    <string name="title_activity_stock">StockActivity</string>
</resources>
