<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signInPage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/BLACKS_lightslategrey">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:elevation="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="25dp"
                    android:src="@mipmap/ic_launcher_round" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/enter_email"
                    android:textColor="#fff"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/enter_password"
                    android:textColor="#fff"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/buttonSignIn"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dip"
                    android:text="@string/sign_in"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFF"
                    android:background="@color/BLACKS_black"
                    android:visibility="visible"
                    android:textStyle="bold" />

                <TextView
                    android:text="@string/not_registered"
                    android:textColor="#fff"
                    android:id="@+id/textViewSignUp"
                    android:textAlignment="center"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Forgot Password? Click here"
                    android:textColor="#fff"
                    android:id="@+id/textViewForgotPassword"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

