<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signUpPage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundfolio">
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/info_layout" >

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:elevation="4dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:paddingTop="15dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="50sp"
                        android:src="@mipmap/ic_launcher" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/text"
                        android:drawableTint="#f5913f"
                        android:fontFamily="@font/abril_fatface"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textColor="@color/text"
                        android:textColorHint="@color/text" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/text"
                        android:drawableTint="#f5913f"
                        android:fontFamily="@font/abril_fatface"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/text"
                        android:textColorHint="@color/text" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/text"
                        android:fontFamily="@font/abril_fatface"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/text"
                        android:textColorHint="@color/text" />


                    <Button
                        android:id="@+id/buttonSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@color/text"
                        android:fontFamily="@font/abril_fatface"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/background"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textViewSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/abril_fatface"
                        android:paddingTop="20dp"
                        android:text="@string/already_account"
                        android:textColor="@color/text" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>